--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,6 +14,7 @@
     "@nutrilife/mobile": "file:",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native/assets-registry": "^0.75.3",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.34",
     "expo-asset": "^10.0.10",
@@ -31,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
